# ingest-book

./: .gitignore  README.md  conda_env.sh  ingest_book.sh  init_env.sh  pyproject.toml  requirements.txt
ingest/: bulk_load_json.py  cli.py  ingest.py
ingest/estc_search/: estc.py
ingest/sheets/: sheet.py
