[tool.poetry]
name = "ingest-book"
version = "0.1.0"
description = "Ingest book into backend"
authors = ["Sriram Viswanathan <sriramvi@andrew.cmu.edu>"]
packages = [
    { include = "ingest" },
    { include = "ingest/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.7"
pygsheets = "^2.0.5"
google-api-python-client = "^2.58.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.5.2"
beautifulsoup4 = "^4.11.1"
click = "^8.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
chewfiles = "ingest.cli:main"